Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,8 @@ body {
     border-bottom-right-radius: 10px;
     flex: 1;
     align-self: stretch;
+    padding-left: 5%;
+    padding-top: 3%;
     margin-bottom: .4rem;
 }
 
@@ -50,14 +52,19 @@ h1 {
     font-family: 'Fraunces', serif;
     font-weight: 700;
     color: var(--title);
+    text-align: left;
 }
 
 p, .old-price {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     color: var(--text);
-    display: absolute;
 }
+
+.old-price {
+    margin-left: 2%;
+}
+
 
 .ribbon-text {
     text-transform: uppercase;
@@ -69,8 +76,9 @@ p, .old-price {
     font-family: 'Fraunces', serif;
     font-weight: 700;
     font-size: 2rem;
-    display: relative;
+    position: relative;
 }
+
 
 button {
     margin: 3rem; auto;
